    (Jurij Smakov) (closes: #319657, #320422)

  * Change default ramdisk size for sparc to 16,384K to accomodate a fatter
    d-i initrd for netboot installs.
    (Joshua Kwan)

  * Don't build-depend on console-tools on s390. (Bastian Blank)

  * Add ARM support. (Vincent Sanders)

  * Add desc.* files for ia64. (dann frazier)

  * Add m68k support. (Christian T. Steigies) 

 -- Christian T. Steigies <cts@debian.org>  Sat,  6 Aug 2005 10:21:14 +0200
 
linux-2.6 (2.6.12-1) unstable; urgency=low

  * New upstream release:
    - "git rocks"
    - address space randomization
    - conversion of ide driver code to the device model
    - restored Philips webcam driver
    - new Broadcom bcm5706 gigabit driver
    - new resource limits for the audio community
    - Multipath device mapper
    - Intel HD Audio alsa driver
    - fixes + arch updates..
    - readdition of tg3 driver, as firmware license has been fixed

  * Dropped the following patches:
    - patch-2.6.11.*.patch (merged)
    - powerpc-ppc64-ibmvscsi.patch (Christoph didn't like it, and it failed
      to build anyways) (Sven Luther)
    - doc-post_halloween.patch (unless someone can come up w/ a valid
      reason for carrying around rapidly bitrotting documentation...)
      (Andres Salomon)
    - sparc32-hypersparc-srmmu.patch (dropped until sparc32 is working
      again, and we can figure out whether it's necessary)
    - fix-alpha-ext3-oops.patch (no longer needed, fixed by compiler)
    - x86-i486_emu.patch (buggy and insecure 80486 instruction emulation
      for 80386; we're no longer supporting this) (closes: #250468)
    - amd64-outs.patch (according to
      http://www.ussg.iu.edu/hypermail/linux/kernel/0502.3/1095.html, this
      is unnecessary for us) (Andres Salomon)
    - sparc64-rtc-mostek.patch (merged)
    - sparc64-compat-nanoseconds.patch (merged) 
    - sparc64-sunsu-init-2.6.11.patch (merged)
    - sunsab-uart-update-timeout.patch (merged)