@@ -227,5 +227,6 @@ binary:	binary-indep binary-arch
 #
 debian/control: debian/changelog $(wildcard debian/templates/control.*.in)
 	debian/bin/gencontrol.py
+	exit 1
 
 .PHONY: clean build unpack binary-indep binary-arch binary patch unpatch source tree
