@@ -70,7 +70,6 @@ find . -mindepth 1 -maxdepth 1 \
 	-printf "../linux-headers-$prefix/%f\n" |
 	xargs ln -s --target-directory="$dir"
 
-cp -a scripts $dir
 cd include
 find . -mindepth 1 -maxdepth 1 \
 	! -name config -a ! -name linux -a \( \
@@ -89,6 +88,19 @@ cd ..
 
 mkdir -p $top/lib/modules/$version
 ln -s /usr/src/linux-headers-$version $top/lib/modules/$version/build
+
+mkdir -p $dir/scripts/basic
+mkdir -p $dir/scripts/kconfig
+mkdir -p $dir/scripts/mod
+cp -a scripts/Makefile* $dir/scripts
+cp -a scripts/kallsyms $dir/scripts
+strip $dir/scripts/kallsyms
+cp -a scripts/basic/fixdep $dir/scripts/basic
+strip $dir/scripts/basic/fixdep
+cp -a scripts/kconfig/conf $dir/scripts/kconfig
+strip $dir/scripts/kconfig/conf
+cp -a scripts/mod/modpost $dir/scripts/mod
+strip $dir/scripts/mod/modpost
 
 debhelper_post $pkg
 
