@@ -14,6 +14,8 @@ linux-2.6 (2.6.12-2) UNRELEASED; urgency=low
   * Add ARM support. (Vincent Sanders)
 
   * Add desc.* files for ia64. (dann frazier)
+  
+  * Strip down the scripts dir in the headers packages. (Bastian Blank)
 
   * Add m68k support. (Christian T. Steigies) 
 
